--- a/app/globals.css
+++ b/app/globals.css
@@ -70,3 +70,13 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+
+@keyframes twinkle {
+  0% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
